[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tunnelgame"
description = "A language for Interactive Fiction!"
authors = [{ name = "Kyle Hess", email = "donotreply@github.com" }]
version = "0.0.1"
readme = "README.md"
urls = { Homepage = "https://github.com/exfret/tunnelgame" }
keywords = ["IF", "Interactive Fiction"]
classifiers = ["Topic :: Games/Entertainment :: Role-Playing"]
requires-python = ">=3.10"
dependencies = ["black", "pytest", "pyyaml", "rich", "flask"]

[project.scripts]
tunnelgame = "tunnelgame:main"

[tool.black]
line-length = 180